# c9k-te-deploy

./: README.md  pyproject.toml  requirements.txt  run.py
nornir_data/: config.yaml  defaults.yaml  groups.yaml  hosts.yaml
rpc_templates/: app_hosting_cfg.xml.j2  app_hosting_oper.xml
tests/: test_c9k_te_deploy.py
